# JT

./: .coveragerc  .dockerignore  .gitignore  .mcp.json  AGENT_PROMPT.md  BRIEF.md  CLAUDE.md  Dockerfile  EXECUTIVE_BRIEF.md  HANDOFF.md  HANDOFF_CFO_ROUTER.md  README.md  ROADMAP_LIVE.md  TEST_COVERAGE_ANALYSIS.md  amidala_code_summary.txt  docker-compose.yml  docker-entrypoint.sh  docker-healthcheck.py  generate_summary.py  guardian_agent_setup.py  guardian_handoff_pipe.py  guardian_launcher.py  guardian_learning.py  guardian_lesson_2_1.py  guardian_lesson_3.py  guardian_one_lesson.py  guardian_skills.json  guardian_system_4.py  guardian_test_2.py  install-linux.ps1  main.py  mcp_server.py  nosleep.ps1  nosleep.sh  promptfooconfig.yaml  pyproject.toml  requirements.txt  shm_pipeline.py  start_teleprompter.sh  timestamp_memory.py
.claude/: settings.json
GuardianOne.swiftpm/: Package.swift
ai-sandbox/: Dockerfile  docker-compose.yml  run.py
amidala_company/: .env.example  .gitignore  README.md  debug_preview.py  requirements.txt
atp-website/: index.html
chronos/: __init__.py  auth.py  sync.py
config/: .env.example  guardian-one.service  guardian_config.yaml
data/: boris.db  cfo_ledger.json  guardian_errors.json
deploy/: guardian-one.service  install.sh
device_tracker/: __main__.py  agent.py  cli.py  models.py
docs/: AI_AGENTDEVPIPELINE_PROMPT.md  GOOS_AGENT_EXECUTION_PLAN.md  GOOS_V1.md  GUARDIAN_ONE_SYSTEM_PROMPT.md  HANDOFF.md  VERIFICATION_PROTOCOL.md  archivist_agent_prompt.txt
greg/: README.md
guardian/: __init__.py  __main__.py  agent.py  cli.py  store.py  triage.py
guardian_api/: Gemfile
guardian_one/: __init__.py
handoffs-and-briefs/: 2026-03-24_design-tokens-topnav.md  2026-04-10_chore-update-boris-sqlite-db-from-test-r.md
ios/: README.md
legacy/: guardian_agent_setup_1.py  guardian_system_1.py
logs/: guardian_one_log_backup_20260223_141252.json
reports/: epic_systems_physician_builder_analysis.md
scripts/: docker-start.sh  generate_archivist_manual.py  guardian-one.service  guardian_daemon.ps1  guardian_daemon.sh  inspect_mcp.sh  setup.sh
search/: README.md  docker-compose.yml  requirements.txt  seed_documents.py  self_improve.py  server.py
sentiment-worker/: package.json  wrangler.toml
sessions/: README.md  archivist.md  cfo.md  chronos.md  doordash.md  gmail.md  guardian-core.md  homelink.md  web.md
src/: evaluator.py  fetcher.py  main.py  sample_data.py  searcher.py  storage.py
tests/: conftest.py  test_account_manager.py  test_agents.py  test_ai_engine.py  test_archivist_advanced.py  test_archivist_integration.py  test_archivist_v2.py  test_audit.py  test_autofill.py  test_base_agent.py  test_boris.py  test_boris_sql.py  test_chat_ui.py  (+67 more)
(+353 files in other folders)
