[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guardian-one"
version = "0.1.0"
description = "Guardian One — multi-agent system for personal life management"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0,<7",
    "cryptography>=42.0,<47",
    "python-dotenv>=1.0,<2",
    "schedule>=1.2,<2",
    "rich>=13.0,<15",
    "httpx>=0.27,<1",
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5.0,<6",
    "pytest-timeout>=2.3,<3",
    "flask>=3.0,<4",
    "openpyxl>=3.1,<4",
]

[tool.setuptools.packages.find]
include = ["guardian_one*"]

[project.scripts]
guardian = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests that take >1s (deselect with '-m not slow')",
    "integration: cross-agent or multi-component tests",
    "security: security-focused test cases",
]
